# i3status-extender

./: CNAME  Cargo.toml  README.md
src/: io.rs  lib.rs  tests.rs
