[package]
name = "i3status_ext"
version = "0.0.5"
authors = ["Patrick Hoffmann fightling@elektropost.org>"]
edition = "2018"
description = "extend i3status"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://github.com/fightling/i3status_ext"
homepage = "https://github.com/fightling/i3status_ext"
keywords = ["i3", "i3wm", "i3status" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
text_io = "0.1.8"
regex = "1.4.6"
