[package]
name = "i3status_ext"
version = "0.1.1"
authors = ["Patrick Hoffmann fightling@elektropost.org>"]
edition = "2018"
description = "extend i3status"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/i3status_ext"
homepage = "https://i3status_ext.thats-software.com"
keywords = ["i3", "i3wm", "i3status" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
text_io = { version = "0.1.8", default-features = false }
regex = { version = "1.4.6", default-features = false, features = ["std"] }
